WMG112519/force-app/main/default/objects/Request_Form__c/Request_Form__c.object-meta.xml
<CustomObject>
    <description>SS: Changed object name from Material Request to Request form.</description>
    <label>Request Form</label>
    <nameField>
        <displayFormat>R - {0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>