WMG112519/force-app/main/default/objects/Request_Form__c/fields/About_their_Business__c.field-meta.xml
<CustomField>
    <fullName>About_their_Business__c</fullName>
    <label>About their Business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>