WMG112519/force-app/main/default/objects/Request_Form__c/fields/Advisor_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor/Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Request Forms</relationshipLabel>
    <relationshipName>Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>