WMG112519/force-app/main/default/objects/Request_Form__c/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <label>AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>