WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_13_Energy_Renaissance__c.field-meta.xml
<CustomField>
    <fullName>BRK_13_Energy_Renaissance__c</fullName>
    <label>BRK 13 - Energy Renaissance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>