WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_14_Simplification_Trend__c.field-meta.xml
<CustomField>
    <fullName>BRK_14_Simplification_Trend__c</fullName>
    <label>BRK 14 - Simplification Trend</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>