WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_15_Is_Infrastructure_Cheap__c.field-meta.xml
<CustomField>
    <fullName>BRK_15_Is_Infrastructure_Cheap__c</fullName>
    <label>BRK 15 - Is Infrastructure Cheap</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>