WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_16_REITs_and_Rising_Rates__c.field-meta.xml
<CustomField>
    <fullName>BRK_16_REITs_and_Rising_Rates__c</fullName>
    <label>BRK 16 -  REITs and Rising Rates</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>