WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_17_MLP_Vs_C_Corp__c.field-meta.xml
<CustomField>
    <fullName>BRK_17_MLP_Vs_C_Corp__c</fullName>
    <label>BRK 17 - MLP Vs C-Corp</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>