WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_18_Autonomous_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>BRK_18_Autonomous_Vehicles__c</fullName>
    <label>BRK 18 - Autonomous Vehicles</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>