WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_1_Global_Listed_Infra_Fund__c.field-meta.xml
<CustomField>
    <fullName>BRK_1_Global_Listed_Infra_Fund__c</fullName>
    <label>BRK 1 - Global Listed Infra Fund</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>