WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_1_GlobalListedInfraFund_Cost__c.field-meta.xml
<CustomField>
    <fullName>BRK_1_GlobalListedInfraFund_Cost__c</fullName>
    <formula>BRK_1_Global_Listed_Infra_Fund__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRK 1 -GlobalListedInfraFund Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>