WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_2_Global_Listed_Real_Estate_Fund__c.field-meta.xml
<CustomField>
    <fullName>BRK_2_Global_Listed_Real_Estate_Fund__c</fullName>
    <description>Created to capture loose fact sheets for printing.</description>
    <label>BRK 2 - Global Listed Real Estate Fund</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>