WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_2_GlobalListedRealEstateFund_Cost__c.field-meta.xml
<CustomField>
    <fullName>BRK_2_GlobalListedRealEstateFund_Cost__c</fullName>
    <formula>BRK_2_Global_Listed_Real_Estate_Fund__c * 1.20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRK 2 -GlobalListedRealEstateFund Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>