WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_3_Real_Assets_Securities_Fund__c.field-meta.xml
<CustomField>
    <fullName>BRK_3_Real_Assets_Securities_Fund__c</fullName>
    <description>Created to capture loose fact sheets for printing.</description>
    <label>BRK 3 - Real Assets Securities Fund</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>