WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_3_RealAssetsSecuritiesFund_Cost__c.field-meta.xml
<CustomField>
    <fullName>BRK_3_RealAssetsSecuritiesFund_Cost__c</fullName>
    <formula>BRK_3_Real_Assets_Securities_Fund__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRK 3 -RealAssetsSecuritiesFund Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>