WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_4_U_S_Listed_Real_Estate_Fund__c.field-meta.xml
<CustomField>
    <fullName>BRK_4_U_S_Listed_Real_Estate_Fund__c</fullName>
    <description>Created to capture loose fact sheets for printing.</description>
    <label>BRK 4 - U.S. Listed Real Estate Fund</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>