WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_4_U_S_ListedRealEstateFund_Cost__c.field-meta.xml
<CustomField>
    <fullName>BRK_4_U_S_ListedRealEstateFund_Cost__c</fullName>
    <formula>BRK_4_U_S_Listed_Real_Estate_Fund__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRK 4 -U.S.ListedRealEstateFund Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>