WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_5_Public_Securities_Group_About_US__c.field-meta.xml
<CustomField>
    <fullName>BRK_5_Public_Securities_Group_About_US__c</fullName>
    <description>Created to capture loose fact sheets for printing.</description>
    <label>BRK 5 - Public Securities Group About US</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>