WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_5_PublicSecuritiesGroupAboutUS_Cost__c.field-meta.xml
<CustomField>
    <fullName>BRK_5_PublicSecuritiesGroupAboutUS_Cost__c</fullName>
    <formula>BRK_5_Public_Securities_Group_About_US__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRK 5 -PublicSecuritiesGroupAboutUS Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>