WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_6_CCB_MLP_Focus_Fund__c.field-meta.xml
<CustomField>
    <fullName>BRK_6_CCB_MLP_Focus_Fund__c</fullName>
    <description>Created to capture loose fact sheets for printing.</description>
    <label>BRK 6 - CCB MLP Focus Fund</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>