WMG112519/force-app/main/default/objects/Request_Form__c/fields/BRK_6_CCB_MLP_FocusFund_Cost__c.field-meta.xml
<CustomField>
    <fullName>BRK_6_CCB_MLP_FocusFund_Cost__c</fullName>
    <formula>BRK_6_CCB_MLP_Focus_Fund__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BRK 6 -CCB MLP FocusFund Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>