WMG112519/force-app/main/default/objects/Request_Form__c/fields/Brookfield_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Brookfield_Strategy__c</fullName>
    <label>Brookfield Strategy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Center Coast Brookfield MLP Focus Fund</fullName>
            </value>
            <value>
                <fullName>Center Coast Brookfield MLP SMA</fullName>
            </value>
            <value>
                <fullName>CEN</fullName>
            </value>
            <value>
                <fullName>Brookfield Global Listed Infrastructure Fund</fullName>
            </value>
            <value>
                <fullName>Brookfield Global Listed Real Estate Fund</fullName>
            </value>
            <value>
                <fullName>Brookfield Real Assets Securities Fund</fullName>
            </value>
            <value>
                <fullName>Brookfield U.S. Listed Real Estate Fund</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>Home Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>