WMG112519/force-app/main/default/objects/Request_Form__c/fields/CCB_MLP_Focus_Fund_Morgan_Stanley__c.field-meta.xml
<CustomField>
    <fullName>CCB_MLP_Focus_Fund_Morgan_Stanley__c</fullName>
    <description>To record # of Kit print request.</description>
    <label>CCB MLP Focus Fund Morgan Stanley</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>