WMG112519/force-app/main/default/objects/Request_Form__c/fields/CCB_MLP_FocusFundGeneral_Cost__c.field-meta.xml
<CustomField>
    <fullName>CCB_MLP_FocusFundGeneral_Cost__c</fullName>
    <formula>CCB_MLP_Focus_Fund_General__c * 8.10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCB MLP FocusFundGeneral Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>