WMG112519/force-app/main/default/objects/Request_Form__c/fields/CCB_MLP_FocusFundUBS_Cost__c.field-meta.xml
<CustomField>
    <fullName>CCB_MLP_FocusFundUBS_Cost__c</fullName>
    <formula>CCB_MLP_Focus_Fund_UBS__c * 7.35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCB MLP FocusFundUBS Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>