WMG112519/force-app/main/default/objects/Request_Form__c/fields/Client_or_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Client_or_Prospect__c</fullName>
    <label>Client or Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>