WMG112519/force-app/main/default/objects/Request_Form__c/fields/Company_or_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_or_Name__c</fullName>
    <label>Company or Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>