WMG112519/force-app/main/default/objects/Request_Form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Other Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>