WMG112519/force-app/main/default/objects/Request_Form__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Contact object</description>
    <label>Salesforce Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Request Forms (Contact)</relationshipLabel>
    <relationshipName>Request_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>