WMG112519/force-app/main/default/objects/Request_Form__c/fields/Contact_s_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_State__c</fullName>
    <formula>Advisor_Point_of_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&#39;s State</label>
    <type>Text</type>
</CustomField>