WMG112519/force-app/main/default/objects/Request_Form__c/fields/Currently_allocated_to_whom__c.field-meta.xml
<CustomField>
    <fullName>Currently_allocated_to_whom__c</fullName>
    <inlineHelpText>Currently allocated to the space? If so, to whom?</inlineHelpText>
    <label>Currently allocated to whom?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>