WMG112519/force-app/main/default/objects/Request_Form__c/fields/Giveaway_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Giveaway_Total_Cost__c</fullName>
    <formula>YetiBottle__c * 28.89 
+  YetiLowball__c * 18.99 
+  GolfBallsBoxof12__c * 47.10
+  YetiMug__c * 23.74
+  RuMeToteBag__c * 5.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giveaway Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>