WMG112519/force-app/main/default/objects/Request_Form__c/fields/GolfBallsBoxof12__c.field-meta.xml
<CustomField>
    <fullName>GolfBallsBoxof12__c</fullName>
    <inlineHelpText>Cost: $47.10/box</inlineHelpText>
    <label>Golf Balls – Box of 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>