WMG112519/force-app/main/default/objects/Request_Form__c/fields/Grand_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Cost__c</fullName>
    <formula>Total_Kits_Cost__c +
 Total_LooseFactSheets_Cost__c +
 Total_Other_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>