WMG112519/force-app/main/default/objects/Request_Form__c/fields/Intro_to_Oaktree__c.field-meta.xml
<CustomField>
    <fullName>Intro_to_Oaktree__c</fullName>
    <description>SS: 1/15/2019: Created to capture UBS Oaktree related details.</description>
    <label>Intro to Oaktree</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>