WMG112519/force-app/main/default/objects/Request_Form__c/fields/Name_of_Firm__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Firm__c</fullName>
    <formula>Advisor_Point_of_Contact__r.SalesConnect__AccountName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Firm</label>
    <type>Text</type>
</CustomField>