WMG112519/force-app/main/default/objects/Request_Form__c/fields/Notes_from_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Notes_from_Reviewer__c</fullName>
    <inlineHelpText>To be completed by the reviewer</inlineHelpText>
    <label>Notes from Reviewer</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>