WMG112519/force-app/main/default/objects/Request_Form__c/fields/Oaktree_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Oaktree_Brochure__c</fullName>
    <description>SS: 10/15/2019: Created to capture UBS Oaktree related details.</description>
    <label>Oaktree Brochure</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>