WMG112519/force-app/main/default/objects/Request_Form__c/fields/Oaktree_Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Oaktree_Term_Sheet__c</fullName>
    <description>SS: 1/15/2019: Created to capture UBS Oaktree related details.</description>
    <label>Oaktree Term Sheet</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>