WMG112519/force-app/main/default/objects/Request_Form__c/fields/Opportunity_Allocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Allocation_Amount__c</fullName>
    <label>Opportunity Allocation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>