WMG112519/force-app/main/default/objects/Request_Form__c/fields/Other_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Amount__c</fullName>
    <label>Other Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>