WMG112519/force-app/main/default/objects/Request_Form__c/fields/Other_Amount_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Amount_Cost__c</fullName>
    <formula>Other_Amount__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Amount Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>