WMG112519/force-app/main/default/objects/Request_Form__c/fields/Other_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Name__c</fullName>
    <label>Other Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>