WMG112519/force-app/main/default/objects/Request_Form__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <label>Other Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>