WMG112519/force-app/main/default/objects/Request_Form__c/fields/Pickedupinoffice__c.field-meta.xml
<CustomField>
    <fullName>Pickedupinoffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Picked up in office</label>
    <type>Checkbox</type>
</CustomField>