WMG112519/force-app/main/default/objects/Request_Form__c/fields/RuMeToteBag__c.field-meta.xml
<CustomField>
    <fullName>RuMeToteBag__c</fullName>
    <inlineHelpText>Cost: $5.75 /each</inlineHelpText>
    <label>RuMe Tote Bag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>