WMG112519/force-app/main/default/objects/Request_Form__c/fields/Suggested_Format_Points_of_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Format_Points_of_Discussion__c</fullName>
    <inlineHelpText>Update, Q+A, specific question?</inlineHelpText>
    <label>Suggested Format/Points of Discussion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>