WMG112519/force-app/main/default/objects/Request_Form__c/fields/Total_Kits_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Kits_Cost__c</fullName>
    <formula>CCB_MLP_FocusFundUBS_Cost__c  + 
 CCB_MLP_FocusFundRaymondJames_Cost__c +
 CCB_MLP_FocusFundMorganStanley_Cost__c +
 CCB_MLP_FocusFundGeneral_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Kits Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>