WMG112519/force-app/main/default/objects/Request_Form__c/fields/Total_LooseFactSheets_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_LooseFactSheets_Cost__c</fullName>
    <formula>BRK_1_GlobalListedInfraFund_Cost__c +
 BRK_2_GlobalListedRealEstateFund_Cost__c +
 BRK_3_RealAssetsSecuritiesFund_Cost__c +
 BRK_4_U_S_ListedRealEstateFund_Cost__c +
  BRK_6_CCB_MLP_FocusFund_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LooseFactSheets Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>