WMG112519/force-app/main/default/objects/Request_Form__c/fields/Total_Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Cost__c</fullName>
    <formula>BRK_5_PublicSecuritiesGroupAboutUS_Cost__c +
 Other_Amount_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>