WMG112519/force-app/main/default/objects/Request_Form__c/fields/YetiBottle__c.field-meta.xml
<CustomField>
    <fullName>YetiBottle__c</fullName>
    <inlineHelpText>Cost: $28.89/each</inlineHelpText>
    <label>Yeti Bottle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>