WMG112519/force-app/main/default/objects/Request_Form__c/fields/YetiLowball__c.field-meta.xml
<CustomField>
    <fullName>YetiLowball__c</fullName>
    <inlineHelpText>Cost: $18.99/each</inlineHelpText>
    <label>Yeti Lowball</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>