WMG112519/force-app/main/default/objects/Request_Form__c/fields/YetiMug__c.field-meta.xml
<CustomField>
    <fullName>YetiMug__c</fullName>
    <inlineHelpText>Cost: $23.74/each</inlineHelpText>
    <label>Yeti Mug</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>