WMG112519/force-app/main/default/objects/Request_Form__c/recordTypes/Giveaway_Requests.recordType-meta.xml
<RecordType>
    <fullName>Giveaway_Requests</fullName>
    <active>true</active>
    <label>Giveaway Requests</label>
</RecordType>