WMG112519/force-app/main/default/objects/Request_Form__c/recordTypes/Material_Requests.recordType-meta.xml
<RecordType>
    <fullName>Material_Requests</fullName>
    <active>true</active>
    <label>Material Requests</label>
</RecordType>