WMG112519/force-app/main/default/objects/Request_Form__c/recordTypes/PM_Analyst_Request.recordType-meta.xml
<RecordType>
    <fullName>PM_Analyst_Request</fullName>
    <active>true</active>
    <label>PM/Analyst Request</label>
</RecordType>