WMG112519/force-app/main/default/objects/Request_Form__c/validationRules/Validation_for_Zip_code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Zip_code</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(Zip__c)), 
     NOT(REGEX(Zip__c, &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
    <errorDisplayField>Zip__c</errorDisplayField>
    <errorMessage>Please enter a valid zip code</errorMessage>
</ValidationRule>