WMG112519/force-app/main/default/objects/Request_Form__c/listViews/Copy_of_MR_List_for_Fulfilled.listView-meta.xml
<ListView>
    <fullName>Copy_of_MR_List_for_Fulfilled</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Company_or_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Fulfilled__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Everything</filterScope>
    <label>MR List for Fulfilled</label>
</ListView>