WMG112519/force-app/main/default/objects/Request_Form__c/listViews/Material_Request_Forms.listView-meta.xml
<ListView>
    <fullName>Material_Request_Forms</fullName>
    <columns>NAME</columns>
    <columns>Fulfilled__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Request_Form__c.Material_Requests</value>
    </filters>
    <label>Material Request Forms</label>
</ListView>